--- a/index.Rmd
+++ b/index.Rmd
@@ -2,7 +2,9 @@
 title: "WebODM Data Processing Tests" 
 output: 
   html_document: 
-    self_contained: yes
+    self_contained: no
+    smart: no
+    lib_dir: libs
 ---
 
 # Treasure Island 
